--- a/css/style.css
+++ b/css/style.css
@@ -448,8 +448,8 @@ a {
         );
 }
 
-.hover-colo:hover {
-    color: #000000;
+.hover-colo-btn:hover div {
+    color: #000000 !important;
     transition: .3s all;
 }
 
@@ -459,7 +459,7 @@ a {
 
 .hover-colo-btn.active {
     background-color: #8cff64 !important;
-    color: #fff;
+    color: #000000;
     border-radius: 40px;
 }
 
@@ -475,6 +475,45 @@ a {
     height: 35px;
     background-color: white;
     border-radius: 50%;
+}
+.stciky-tab img{
+    bottom: 0;
+    right: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.custom-tab-btn {
+  flex: 1;
+  display: flex;
+  justify-content: space-between; /* فاصله متن‌ها */
+  align-items: center;
+  padding: 10px 15px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background: #fff;
+  font-weight: 700;
+  transition: all 0.3s ease;
+}
+
+.custom-tab-btn:hover {
+  background-color: #f0f0f0;
+}
+
+.custom-tab-btn.active {
+  background-color: #0d6efd;
+  color: #fff;
+  border-color: #0d6efd;
 }
 
 /* media */
