--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,7 @@ a {
 .hover-colo-btn svg {
     display: none;
 }
+
 .hover-colo-btn.active svg {
     display: block;
 }
@@ -476,7 +477,8 @@ a {
     background-color: white;
     border-radius: 50%;
 }
-.stciky-tab img{
+
+.stciky-tab img {
     bottom: 0;
     right: 0;
 }
@@ -494,26 +496,85 @@ a {
 
 
 .custom-tab-btn {
-  flex: 1;
-  display: flex;
-  justify-content: space-between; /* فاصله متن‌ها */
-  align-items: center;
-  padding: 10px 15px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  background: #fff;
-  font-weight: 700;
-  transition: all 0.3s ease;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    /* فاصله متن‌ها */
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    background: #fff;
+    font-weight: 700;
+    transition: all 0.3s ease;
 }
 
 .custom-tab-btn:hover {
-  background-color: #f0f0f0;
+    background-color: #f0f0f0;
 }
 
 .custom-tab-btn.active {
-  background-color: #0d6efd;
-  color: #fff;
-  border-color: #0d6efd;
+    background-color: #0d6efd;
+    color: #fff;
+    border-color: #0d6efd;
+}
+
+
+.star-color {
+    color: #ee440e;
+}
+
+
+.customers-back {
+    position: relative;
+    background-image: url(../images/slider/h1_bg-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    clip-path: polygon(0 0, 100% 0, 100% 93%, 0 100%);
+    padding-bottom: 150px !important;
+    z-index: 1;
+}
+
+/* تیرگی روی کل بک‌گراند */
+.customers-back::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.75);
+    /* شفافیت رو تغییر بده */
+    z-index: 1;
+}
+
+
+/* متن و محتوای داخل سکشن بالاتر از لایه‌ها باشه */
+.customers-back>* {
+    position: relative;
+    z-index: 3;
+}
+
+.customers-txt {
+    font-size: 70px;
+}
+
+.swiper-slide {
+    background: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 10px;
+    height: 200px;
+    /* ارتفاع دلخواه */
+}
+
+.customer-card {
+    padding: 40px 40px 40px 40px;
+    background: #FFFFFF12;
+    border-radius: 20px;
 }
 
 /* media */
