--- a/css/style.css
+++ b/css/style.css
@@ -560,22 +560,22 @@ a {
     font-size: 70px;
 }
 
-.swiper-slide {
-    background: #eee;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    border-radius: 10px;
-    height: 200px;
-    /* ارتفاع دلخواه */
-}
 
 .customer-card {
     padding: 40px 40px 40px 40px;
     background: #FFFFFF12;
     border-radius: 20px;
 }
+
+.brand_s img {
+    opacity: 0.2;
+    transition: .3s;
+}
+
+.brand_s img:hover {
+    opacity: 1;
+}
+
 
 /* media */
 @media only screen and (min-width: 576px) {}
