--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .fs18 {
-    font-size: 18px;
+    font-size: 18px !important;
 }
 
 .fs19 {
@@ -92,6 +92,7 @@ body {
 
 }
 
+
 .object-fit-cover {
     object-fit: cover;
 }
@@ -103,21 +104,145 @@ a {
 .menu {
     margin-top: -30px;
     border-radius: 40px 40px 0 0;
-    padding-top: 1.9em;
-    padding-bottom: 1.9em;
+    font-weight: 600;
+
 }
 
-.menu ul li {
+.main-menu li.menu-item {
     list-style: none;
     display: inline;
     margin-right: 30px;
     font-size: 19px;
     font-weight: 600;
+    padding-top: 1.8em;
+    padding-bottom: 1.8em;
+
 }
 
-.menu ul li a {
+.main-menu li.menu-item a {
     color: #000000;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* منوی اصلی */
+.main-menu .menu-item {
+    position: relative;
+    margin: 0 15px;
+}
+
+.main-menu .menu-item a {
+    text-decoration: none;
+    color: #333;
+    padding: 10px 15px;
+    display: block;
+
+}
+
+.submenu,
+.mega-menu {
+    position: absolute;
+    top: 100%;
+    background: #fff;
+    z-index: 99;
+    transition: all 0.3s ease;
+    opacity: 0;
+    width: 274px;
+    right: -30px;
+    border-radius: 15px;
+    transform: translateY(20px) !important;
+    transition: transform 0.3s ease, opacity 0.3s ease !important;
+}
+
+.submenu li a {
+    color: #5B5B5B;
+    font-weight: 500;
+}
+
+
+.submenu li:not(:first-child) {
+    margin-top: 15px;
+}
+
+/* زیر منوی کوچک */
+.submenu.small-menu {
+    min-width: 150px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.mega-menu.full-width {
+    position: fixed;
+    top: 167px;
+    left: 0;
+    width: 100vw;
+    background: #fff;
+    z-index: 999;
+    pointer-events: none;
+    /* وقتی مخفی است، کلیک نمی‌پذیرد */
+
+    /* حالت مخفی */
+    opacity: 0;
+
+    transform: translateY(20px) !important;
+    transition: transform 0.3s ease, opacity 0.3s ease !important;
+}
+
+/* وقتی موس روی آیتم منو یا خود مگا منو هست */
+.menu-item:hover .mega-menu.full-width,
+.menu-item:hover .submenu {
+    opacity: 1;
+    transform: translateY(0) !important;
+    transition: 1s all;
+    pointer-events: auto;
+    /* حالا قابل تعامل است */
+}
+
+.meg-mn ul li {
+    list-style: none;
+}
+
+.meg-mn ul li {
+    font-weight: 500;
+    margin: 0; margin-top: 16px;
+}
+
+.meg-mn ul li a {
+    color: #5B5B5B !important;
+    padding: 0 !important;
+    font-size: 15px;
+   
+}
+
+
+
+
+
+
 
 .c-sec-color {
     color: #a8a8a8;
@@ -174,7 +299,7 @@ a {
 .swiper-pagination-bullet-active {
     border: 3px solid #8cff64 !important;
     background-color: transparent !important;
-     width: 11px !important;
+    width: 11px !important;
     height: 11px !important;
 
 }
