--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ a {
 .main-menu li.menu-item {
     list-style: none;
     display: inline;
-    margin-right: 30px;
+    margin-right: 10px;
     font-size: 19px;
     font-weight: 600;
     padding-top: 1.8em;
@@ -198,7 +198,7 @@ a {
 .mega-menu.full-width {
     position: fixed;
     top: 167px;
-    left: 0;
+    right: 0;
     width: 100vw;
     background: #fff;
     z-index: 999;
@@ -207,9 +207,10 @@ a {
 
     /* حالت مخفی */
     opacity: 0;
-
+    border-radius: 0 !important;
     transform: translateY(20px) !important;
     transition: transform 0.3s ease, opacity 0.3s ease !important;
+    box-shadow: 0 0 10px rgba(212, 212, 212, 0.738);
 }
 
 /* وقتی موس روی آیتم منو یا خود مگا منو هست */
@@ -228,17 +229,99 @@ a {
 
 .meg-mn ul li {
     font-weight: 500;
-    margin: 0; margin-top: 16px;
+    margin: 0;
+    margin-top: 16px;
 }
 
 .meg-mn ul li a {
     color: #5B5B5B !important;
     padding: 0 !important;
     font-size: 15px;
-   
+
+}
+
+/* mobile menu */
+/* overlay */
+.custom-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 900;
+}
+
+/* منوی راست */
+.custom-sidebar {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    width: 300px;
+    height: 100%;
+    background: #ffffff;
+    color: #000;
+    transition: right 0.3s;
+    z-index: 1000;
+    overflow-y: auto;
+}
+
+.custom-sidebar.active {
+    right: 0;
+}
+
+/* لوگو */
+.custom-sidebar .logo {
+    text-align: center;
+    padding: 20px;
+}
+
+.custom-sidebar .logo img {
+    max-width: 150px;
+}
+
+/* منو اصلی */
+.custom-sidebar .menu a {
+    display: block;
+    padding: 12px 20px;
+    color: #000;
+    text-decoration: none;
+    position: relative;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.custom-sidebar .menu a:hover {
+    background: #ffffff;
 }
 
 
+
+
+/* زیرمنوها */
+.custom-sidebar .custom-submenu {
+    display: none;
+    background: #ffffff;
+}
+
+.custom-sidebar .custom-submenu a {
+    padding-left: 40px;
+    color: rgb(131, 131, 131);
+    border-bottom: none;
+    font-weight: 500;
+    font-size: 15px;
+
+}
+
+.custom-sidebar .menu .custom-has-submenu.active .custom-submenu {
+    display: block;
+}
+
+/* دکمه منو */
+#menuBtn {
+    margin: 20px;
+}
 
 
 
