--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ a {
 
 
 .large-txt-2 {
-    font-size: 76px;
+    font-size: 30px;
 }
 
 .slider .red {
@@ -445,7 +445,7 @@ a {
 
 .banner-img {
     border-radius: 20px;
-    height: 550px;
+    height: 350px;
 }
 
 .banner-img+div {
@@ -478,7 +478,7 @@ a {
 }
 
 .category-img {
-    min-height: 350px;
+    height: 280px;
 }
 
 .banner-badge {
@@ -496,8 +496,7 @@ a {
 
 
 .first-title {
-    font-size: 70px;
-
+    font-size: 30px;
 }
 
 .first-title .first-part {
@@ -517,8 +516,11 @@ a {
     background-color: #f4f4f4;
 }
 
-.product-first-clumn {
+/* .product-first-clumn {
     height: 530px;
+} */
+.divi-h {
+    height: 350px;
 }
 
 .product-first-clumn-img {
@@ -532,7 +534,7 @@ a {
 }
 
 .pro-clumn {
-    font-size: 70px;
+    font-size: 50px;
 }
 
 .pro-clumn .first-part {
@@ -668,7 +670,7 @@ a {
 }
 
 .intro-txt {
-    font-size: 65px;
+    font-size: 40px;
 }
 
 .lh-2 {
@@ -680,21 +682,11 @@ a {
 }
 
 .intro-img {
-    height: 840px;
+    height: 400px;
+    width: 100%;
 }
 
-.back-color-co {
-    background: linear-gradient(to right,
-            #f5f5f5 40%,
-            /* از 0 تا 40 درصد خاکستری */
-            #f5f5f5 40%,
-            /* مرز صاف */
-            #ffffff 40%,
-            /* از 40 به بعد سفید */
-            #ffffff 100%
-            /* تا آخر سفید */
-        );
-}
+
 
 .hover-colo-btn:hover div {
     color: #000000 !important;
@@ -805,7 +797,7 @@ a {
 }
 
 .customers-txt {
-    font-size: 70px;
+    font-size: 40px;
 }
 
 
@@ -840,7 +832,9 @@ a {
 
 
 
-
+.border-top-c {
+        border-top: 1px solid rgb(53, 53, 53);
+}
 
 
 
@@ -956,20 +950,133 @@ a {
 }
 
 
+.large-txt {
+    font-size: 30px;
+}
 
-
+.p-cc {
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
+}
 
 /* media */
 @media only screen and (min-width: 576px) {
     .large-txt {
         font-size: 50px;
     }
+
+    .banner-img {
+        height: 400px;
+    }
+
+    .large-txt-2 {
+        font-size: 50px;
+    }
+
+    .fs22-sub {
+        font-size: 18px;
+    }
+
+    .first-title {
+        font-size: 40px;
+    }
 }
 
-@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 768px) {
+    .first-title {
+        font-size: 55px;
+    }
+
+    .category-img {
+        min-height: 250px;
+    }
+
+    .border-bottom-md-0 {
+        border-bottom: 0 !important;
+    }
+
+    .intro-txt {
+        font-size: 50px;
+    }
+
+    .intro-img {
+        height: 700px;
+        width: 100%;
+    }
+
+    .customers-txt {
+        font-size: 55px;
+    }
+
+    .border-top-c {
+        border: none;
+    }
+}
 
 @media only screen and (min-width: 992px) {
     .large-txt {
+        font-size: 70px;
+    }
+
+    .banner-img {
+        height: 550px;
+    }
+
+    .large-txt-2 {
+        font-size: 75px;
+    }
+
+    .fs22-sub {
+        font-size: 22px;
+    }
+
+    .first-title {
+        font-size: 70px;
+    }
+
+    .category-img {
+        min-height: 250px;
+    }
+
+    .divi-h {
+        height: auto;
+    }
+
+    .pro-clumn {
+        font-size: 50px;
+    }
+
+    .p-cc {
+        padding-top: 5em;
+        padding-bottom: 5em;
+    }
+
+    .intro-txt {
+        font-size: 65px;
+    }
+
+    .intro-img {
+        height: 840px;
+        width: 75%;
+    }
+
+    .back-color-co {
+        background: linear-gradient(to right,
+                #f5f5f5 40%,
+                /* از 0 تا 40 درصد خاکستری */
+                #f5f5f5 40%,
+                /* مرز صاف */
+                #ffffff 40%,
+                /* از 40 به بعد سفید */
+                #ffffff 100%
+                /* تا آخر سفید */
+            );
+    }
+
+
+
+
+    .customers-txt {
         font-size: 70px;
     }
 }
@@ -982,6 +1089,16 @@ a {
     .large-txt {
         font-size: 70px;
     }
+
+    .category-img {
+        min-height: 350px;
+    }
+
+    .pro-clumn {
+        font-size: 70px;
+    }
+
+
 
 
 }
