--- a/css/style.css
+++ b/css/style.css
@@ -1104,11 +1104,13 @@ a {
 }
 
 .main-single-title {
-    font-size: 50px;
+    line-height: 1.3;
+    font-size: 30px;
 }
 
 .main-sinle-img {
-    height: 600px;
+    border-radius: 25px;
+    height: 300px;
 }
 
 .content-single-editor p {
@@ -1135,13 +1137,6 @@ a {
     background-color: #f5f5f5;
 }
 
-.right-arrow-shape {
-    width: 16px;
-    height: 16px;
-    background-color: #f5f5f5;
-    right: -8px;
-    transform: rotate(45deg);
-}
 
 .textarea-inp {
     background-color: #f4f4f4;
@@ -1249,6 +1244,15 @@ a {
     .first-blog-grid-img {
         height: 600px;
     }
+
+    .main-single-title {
+        font-size: 40px;
+    }
+
+    .main-sinle-img {
+        height: 400px;
+    }
+
 }
 
 @media only screen and (min-width: 992px) {
@@ -1343,6 +1347,22 @@ a {
 
     .main-first-text {
         font-size: 44px;
+    }
+
+    .main-single-title {
+        font-size: 50px;
+    }
+
+    .main-sinle-img {
+        height: 600px;
+    }
+
+    .right-arrow-shape {
+        width: 16px;
+        height: 16px;
+        background-color: #f5f5f5;
+        right: -8px;
+        transform: rotate(45deg);
     }
 }
 
