--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,20 @@ body {
     border-radius: 10px;
 }
 
+.border-end,
+.border-start,
+.border-bottom,
+.border-top,
+.border {
+    border-color: rgb(230, 230, 230) !important;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
 .text-black {
-    color: #000000;
+    color: #000000 !important;
 }
 
 /* topbar */
@@ -1165,14 +1177,89 @@ a {
 }
 
 #map {
-    height: 100vh;
-    width: 100%
+    height: 300px;
+    width: 100%;
+    filter: grayscale(100%) contrast(1) brightness(1);
+}
+
+/* product default */
+.pro-title {
+    font-size: 50px;
+}
+
+.sixe-box {
+    padding: 11px 22px;
+}
+
+.add-to-card-btn {
+    height: 48px;
+    border-radius: 50px;
+}
+
+.un-active {
+    background-color: #7f7f7f;
+    color: white;
+}
+
+.like-box {
+    width: 58px;
+    height: 50px;
+}
+
+.buy-now-btn {
+    border: 1px solid black;
+
+}
+
+.right-image-gallery-pro {}
+
+
+.zoom-container {
+    overflow: hidden;
+    position: relative;
+}
+
+.zoom-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.1s ease;
+    transform-origin: center center;
+}
+
+
+.description-of-pro h5 {
+    font-weight: 800;
+    font-size: 23px;
 }
 
 
 
+.description-of-pro p {
+     color: #5b5b5b;
+     line-height: 2;
+}
 
+.description-of-pro li {
+    margin-top: 15px;
+}
 
+.message-box{
+    background-color: #3d9cd2;
+    border-right: 8px solid #3485b3;
+    border-radius: 2px;
+}
+
+.bb-3{
+    border-bottom: 3px solid black;
+}
+.wh-s{
+    width: 40px;
+    height: 40px;
+}
+.pop_post{
+    height: 400px;
+}
 /* media */
 @media only screen and (min-width: 576px) {
 
@@ -1268,6 +1355,11 @@ a {
 
     .contac-b-txt {
         font-size: 55px;
+    }
+
+    #map {
+        height: 400px;
+        width: 100%
     }
 
 
@@ -1385,6 +1477,12 @@ a {
 
     .contac-b-txt {
         font-size: 70px;
+    }
+
+
+    #map {
+        height: 600px;
+        width: 100%
     }
 
 }
